--- a/analiseficha.html
+++ b/analiseficha.html
@@ -1097,7 +1097,7 @@ const { data: itens, error } = await sb
     unidade_uso,
     custo_unitario,
     custo_calculado,
-    produto:produtos (
+    produto:produtos!buffet_itens_produto_id_fkey (
       energia_kcal,
       carboidratos,
       proteinas,
