--- a/midias.html
+++ b/midias.html
@@ -13,9 +13,13 @@
   --gold:#d4af37; --border:#1f1f22; --danger:#dc2626;
 }
 *{box-sizing:border-box}
-body{margin:0;background:linear-gradient(180deg,#000,#0b0b0c);color:#fff;font-family:Inter}
+html,body{height:100%}
+body{margin:0;background:linear-gradient(180deg,#000,#0b0b0c);color:#fff;font-family:Inter;overflow-y:auto}
+body.modal-open{overflow:hidden} /* 🔒 trava scroll do fundo */
+
 .header{position:sticky;top:0;padding:14px 18px;background:#000;border-bottom:1px solid var(--border);z-index:10;display:flex;justify-content:space-between;align-items:center}
 .header h1{margin:0;font-size:18px;font-weight:900}
+
 .container{max-width:1200px;margin:0 auto;padding:16px;display:grid;grid-template-columns:360px 1fr;gap:16px}
 @media(max-width:900px){.container{grid-template-columns:1fr}}
 
@@ -50,18 +54,28 @@ button.primary:hover{box-shadow:0 0 0 2px rgba(212,175,55,.15) inset}
 .actions .toggle.on{border-color:var(--gold);color:var(--gold)}
 .actions .toggle.off{border-color:#555;color:#aaa}
 
+/* ===== MODAL ===== */
 .modal{position:fixed; inset:0;background:rgba(0,0,0,.7);backdrop-filter: blur(6px);display:none;place-items:center;z-index:9999}
 .modal.open{display:grid}
-.modal-box{width:100%;max-width:980px;height:90vh;background:linear-gradient(180deg,#0a0a0a,#000);border-radius:22px;border:1px solid var(--border);padding:16px;display:grid;grid-template-columns:1fr 380px;gap:14px}
+.modal-box{
+  width:100%;max-width:980px;height:90vh;
+  background:linear-gradient(180deg,#0a0a0a,#000);
+  border-radius:22px;border:1px solid var(--border);
+  padding:16px;display:grid;grid-template-columns:1fr 380px;gap:14px;
+  overflow:hidden; /* 🔒 evita scroll no container do modal */
+}
+.buffet-wrap{display:grid;grid-template-rows:auto 1fr;gap:8px;height:100%}
 .buffet-list{overflow:auto;border:1px solid var(--border);border-radius:14px}
 .buffet-item{display:grid;grid-template-columns:64px 1fr auto;gap:10px;padding:10px;border-bottom:1px solid var(--border);cursor:pointer}
 .buffet-item:hover{background:#0f0f12}
 .buffet-item img{width:64px;height:64px;object-fit:contain;background:#000;border-radius:10px}
+
 .toggle{padding:8px 12px;border-radius:999px;border:1px solid var(--border)}
 .toggle.on{border-color:var(--gold);color:var(--gold)}
 .toggle.off{opacity:.6}
-.edit{border:1px solid var(--border);border-radius:14px;padding:12px;display:grid;gap:8px}
-.filters{display:grid;grid-template-columns:1fr 160px;gap:8px;margin-bottom:8px}
+
+.edit{border:1px solid var(--border);border-radius:14px;padding:12px;display:grid;gap:8px;overflow:auto} /* 🔒 rola só aqui */
+.filters{display:grid;grid-template-columns:1fr 160px;gap:8px}
 textarea{min-height:80px}
 </style>
 </head>
@@ -103,17 +117,11 @@ textarea{min-height:80px}
 
 <script>
 const sb = supabase.createClient("https://dxkszikemntfusfyrzos.supabase.co","sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed");
-const fileInput = document.getElementById("file");
-const tipoInput = document.getElementById("tipo");
-const horaInicioInput = document.getElementById("hora_inicio");
-const horaFimInput = document.getElementById("hora_fim");
-const preview = document.getElementById("preview");
-const grid = document.getElementById("grid");
-let diasSel = [];
-document.querySelectorAll(".day").forEach(d=>{d.onclick=()=>{d.classList.toggle("active");const v=Number(d.dataset.v);diasSel.includes(v)?diasSel=diasSel.filter(x=>x!==v):diasSel.push(v);}});
+const fileInput=document.getElementById("file"), tipoInput=document.getElementById("tipo"), horaInicioInput=document.getElementById("hora_inicio"), horaFimInput=document.getElementById("hora_fim"), preview=document.getElementById("preview"), grid=document.getElementById("grid");
+let diasSel=[];
+document.querySelectorAll(".day").forEach(d=>d.onclick=()=>{d.classList.toggle("active");const v=+d.dataset.v;diasSel.includes(v)?diasSel=diasSel.filter(x=>x!==v):diasSel.push(v);});
 fileInput.onchange=()=>{const f=fileInput.files[0];if(!f)return;preview.innerHTML=f.type.startsWith("video")?`<video src="${URL.createObjectURL(f)}" autoplay muted loop playsinline></video>`:`<img src="${URL.createObjectURL(f)}">`;};
 const diasLabel=d=>({1:"Seg",2:"Ter",3:"Qua",4:"Qui",5:"Sex",6:"Sáb",7:"Dom"}[d]||d);
-
 async function load(){const{data}=await sb.from("promocoes").select("*").order("created_at",{ascending:false});grid.innerHTML=(data||[]).map(p=>`<div class="card"><div class="media">${p.tipo==="VIDEO"?`<video src="${p.url}" muted autoplay loop playsinline></video>`:`<img src="${p.url}">`}</div><div class="meta"><span class="badge ${p.ativo?'on':'off'}">${p.tipo} • ${p.ativo?'ON':'OFF'}</span><div class="info">📅 ${(p.dias_semana||[]).map(diasLabel).join(", ")||"—"}<br/>⏰ ${p.hora_inicio} → ${p.hora_fim}</div></div><div class="actions"><button class="toggle ${p.ativo?'on':'off'}" onclick="toggle('${p.id}',${p.ativo})">${p.ativo?'Desativar':'Ativar'}</button><button class="danger" onclick="delPromo('${p.id}','${p.url}')">Excluir</button></div></div>`).join("");}
 async function addPromo(){const f=fileInput.files[0];if(!f||!diasSel.length)return alert("Arquivo e dias obrigatórios");const ext=f.name.split(".").pop();const path=`promocoes/${Date.now()}_${Math.random().toString(36).slice(2)}.${ext}`;await sb.storage.from("promocoes").upload(path,f,{upsert:false});const{data:urlData}=sb.storage.from("promocoes").getPublicUrl(path);await sb.from("promocoes").insert({url:urlData.publicUrl,tipo:tipoInput.value,dias_semana:diasSel,hora_inicio:horaInicioInput.value,hora_fim:horaFimInput.value,ativo:true});fileInput.value="";preview.innerHTML="Pré-visualização";diasSel=[];document.querySelectorAll(".day").forEach(d=>d.classList.remove("active"));load();}
 async function toggle(id,ativo){await sb.from("promocoes").update({ativo:!ativo}).eq("id",id);load();}
@@ -121,8 +129,8 @@ async function delPromo(id,url){if(!confirm("Excluir mídia?"))return;const path
 load();
 
 let buffetItems=[],currentEdit=null;
-function openBuffetModal(){document.getElementById("buffetModal").classList.add("open");loadBuffet();}
-function closeBuffetModal(){document.getElementById("buffetModal").classList.remove("open");}
+function openBuffetModal(){document.body.classList.add("modal-open");document.getElementById("buffetModal").classList.add("open");loadBuffet();}
+function closeBuffetModal(){document.body.classList.remove("modal-open");document.getElementById("buffetModal").classList.remove("open");}
 async function loadBuffet(){const{data}=await sb.from("buffet").select("id,nome,descricao,foto_url,ativo,cardapio,tipo").eq("ativo",true).order("nome");buffetItems=data||[];renderBuffet();}
 function renderBuffet(){const term=buscaBuffet.value.toLowerCase();const setor=filtroSetor.value;buffetList.innerHTML=buffetItems.filter(i=>(i.nome||"").toLowerCase().includes(term)&&(!setor||i.tipo===setor)).map(i=>`<div class="buffet-item" onclick="selectItem('${i.id}')"><img src="${i.foto_url||''}"><div><b>${i.nome}</b><br><small>${i.descricao||''}</small><br><small style="opacity:.6">${i.tipo||'Sem setor'}</small></div><button class="toggle ${i.cardapio?'on':'off'}" onclick="toggleCardapio(event,'${i.id}',${i.cardapio})">${i.cardapio?'NO CARDÁPIO':'FORA'}</button></div>`).join("");}
 function selectItem(id){currentEdit=buffetItems.find(i=>i.id===id);editNome.value=currentEdit.nome||"";editDesc.value=currentEdit.descricao||"";}
@@ -132,7 +140,7 @@ async function salvarItem(){if(!currentEdit)return alert("Selecione um item");le
 
 <div id="buffetModal" class="modal" onclick="if(event.target.id==='buffetModal')closeBuffetModal()">
   <div class="modal-box">
-    <div>
+    <div class="buffet-wrap">
       <div class="filters">
         <input id="buscaBuffet" placeholder="Buscar item..." oninput="renderBuffet()">
         <select id="filtroSetor" onchange="renderBuffet()">
