--- a/dashboard.html
+++ b/dashboard.html
@@ -51,10 +51,7 @@ html,body{
   position: relative;
 }
 
-.hero-image-bg{
-  position:absolute; inset:0;
-  background: url("imgmockup-app.png") center center / contain no-repeat; /* <- caber inteiro */
-}
+
 .hero-frame{
   max-width: 96vw;
   height: calc(100vh - 110px);
@@ -77,11 +74,7 @@ html,body{
   pointer-events:none;
 }
 
-.hero-image-bg{
-  position:absolute; inset:0;
-  background: url("imgmockup-app.png") center center / cover no-repeat;
-  transform: scale(1.01); /* evita “borda branca” */
-}
+
   
 .hero-top{
   max-width:1400px; margin:0 auto;
@@ -221,7 +214,14 @@ iframe{flex:1;width:100%;border:0;background:#fff}
 
     <!-- IMAGEM EM FRAME (não corta e não ultrapassa a tela) -->
     <div class="hero-frame">
-      <div class="hero-image-bg"></div>
+<!-- ✅ COLOCAR NO LUGAR DA FOTO -->
+<div class="hero-frame">
+  <iframe
+    src="./fundo.html"
+    style="width:100%; height:100%; border:0; border-radius:22px; background:#020617"
+    loading="lazy"
+  ></iframe>
+</div>
     </div>
   </div>
 </section>
