--- a/fundo.html
+++ b/fundo.html
@@ -32,12 +32,15 @@ html,body{margin:0;background:
   linear-gradient(180deg,#020617,#0b1220 40%,#020617);
 color:var(--text);font-family:Inter,system-ui}
 a{color:inherit;text-decoration:none}
-.container{max-width:1200px;margin:0 auto;padding:28px}
-.header{
-  position:sticky;top:0;z-index:9;
-  backdrop-filter: blur(10px);
-  background: linear-gradient(180deg, rgba(2,6,23,.9), rgba(2,6,23,.6));
-  border-bottom:1px solid var(--border);
+.container{
+  max-width:none;
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+}
+  .header{
+  display:none !important;
 }
 .nav{display:flex;align-items:center;justify-content:space-between;gap:12px}
 .brand{display:flex;align-items:center;gap:10px;font-weight:900;letter-spacing:.4px}
@@ -144,6 +147,19 @@ a{color:inherit;text-decoration:none}
   .hero{grid-template-columns:1fr}
   .features{grid-template-columns:repeat(2,1fr)}
 }
+
+html,body{
+  overflow:auto;
+  overscroll-behavior:none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar{
+  width:0;
+  height:0;
+}
+html{ scrollbar-width: none; }
+body{ -ms-overflow-style: none; }
 </style>
 </head>
 <body>
@@ -288,6 +304,18 @@ counters.forEach(c=>{
     c.el.textContent = (c.pref||'') + v.toLocaleString('pt-BR') + (c.suf||'');
   },30);
 });
+
+
+function requestFull(){
+  const el = document.documentElement;
+  if (el.requestFullscreen) el.requestFullscreen();
+  else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
+}
+document.addEventListener("click", () => {
+  if (!document.fullscreenElement && !document.webkitFullscreenElement) {
+    requestFull();
+  }
+}, { once:true });
 </script>
 </body>
 </html>
