--- a/fundo.html
+++ b/fundo.html
@@ -148,18 +148,30 @@ a{color:inherit;text-decoration:none}
   .features{grid-template-columns:repeat(2,1fr)}
 }
 
-html,body{
-  overflow:auto;
-  overscroll-behavior:none;
+/* A página não rola */
+html, body {
+  height: 100%;
+  overflow: hidden;
+  overscroll-behavior: none;
 }
 
-html::-webkit-scrollbar,
-body::-webkit-scrollbar{
-  width:0;
-  height:0;
+/* Só o main.container rola */
+main.container {
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
-html{ scrollbar-width: none; }
-body{ -ms-overflow-style: none; }
+
+/* Esconde a barra de rolagem do main */
+main.container::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+main.container {
+  scrollbar-width: none;      /* Firefox */
+  -ms-overflow-style: none;  /* IE antigo */
+}
 </style>
 </head>
 <body>
